--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,8 +2,12 @@
 	margin: 0;
 	padding: 0;
 }
+html {
+	scroll-behavior: smooth;
+}
 body{
 	background-image: url('./../../public/white_background.png');
+	overflow-x: hidden;
 }
 @font-face {
 	font-family: Montserrat Alternates;
