--- a/src/components/welcome/styles.module.css
+++ b/src/components/welcome/styles.module.css
@@ -14,7 +14,7 @@
 	filter: contrast(1.1);
 	display: flex;
 	flex-direction: column;
-	align-items: start;
+	align-items: flex-start;
 	justify-content: center;
 }
 
@@ -63,12 +63,6 @@
     border: 4px #266665 solid;
 }
 
-/* .button1:hover,
-.button2:hover {
-	border: 4px #FFD014 solid;
-    background-color: #FFD014;
-    color: #000;
-} */
 
 .button1:hover {
 	border: 4px #FFD014 solid;
@@ -90,9 +84,11 @@
 	.container {
 		background-position: 0 -320px;
 		background-image: url("./../../../public/welcome_background.png");
+		background-repeat: no-repeat;
+		
 	}
 	.titles {
-        padding-left: 10vw;
+        padding-left: 8vw;
 		width: 430px;
     }
 	.title {
@@ -102,7 +98,7 @@
 		font-size: 54px;
 	}
 	.buttonContainer  {
-		padding-left: 10vw;
+		padding-left: 8vw;
 		width: 80vw;
 		display: flex;
 		gap: 35px;
@@ -120,7 +116,6 @@
 
 @media screen and (max-width: 1024px) {
 	.container {
-		background-position: 0 -320px;
 		background-image: url("./../../../public/welcome_background.png");
 	}
 	.titles {
@@ -152,7 +147,6 @@
 
 @media screen and (max-width: 768px) {
 	.container {
-		background-position: 0 -320px;
 		background-image: url("./../../../public/welcome_background.png");
 	}
 	.titles {
@@ -184,7 +178,6 @@
 
 @media screen and (max-width: 425px) {
 	.container {
-		background-position: 0 0px;
 		width: 100vw;
 		background-image: url("./../../../public/welcome2_background.png");
 	}
@@ -219,7 +212,6 @@
 
 @media screen and (max-width: 375px) {
 	.container {
-		background-position: 0 0px;
 		background-image: url("./../../../public/welcome2_background.png");
 		width: 100vw;
 	}
@@ -256,7 +248,6 @@
 
 @media screen and (max-width: 320px) {
 	.container {
-		background-position: 0 0px;
 		background-image: url("./../../../public/welcome2_background.png");
 		width: 100vw;
 	}
