--- a/src/components/menu/styles.module.css
+++ b/src/components/menu/styles.module.css
@@ -48,12 +48,12 @@
 }
 
 .link:hover {
-	background-color: rgba(38, 102, 101, 0.6);
+	background-color: rgba(8, 23, 63, 0.3);
 	color: #fff;
 	border: 4px solid transparent;
 }
 
-.black {
+.unit {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -61,7 +61,7 @@
 
 .unitTitle {
 	font-family: Montserrat bold;
-    margin-bottom: 30px;
+    margin-bottom: 35px;
 	text-transform: uppercase;
 }
 
@@ -69,6 +69,13 @@
 	font-family: Montserrat bold;
 	text-align: center;
     margin-bottom: 60px;
+}
+
+.items {
+	/* justify-content: center; */
+	display: flex;
+	flex-wrap: wrap;
+    gap: 60px;
 }
 
 @media screen and (width >= 1024px) {
@@ -89,6 +96,9 @@
 	.unitSubtitle {
 		font-size: 28px;
     }
+	.items {
+		width: 86%;
+	}
 }
 
 @media screen and (width < 1024px) {
@@ -105,6 +115,9 @@
 	.unitSubtitle {
 		font-size: 28px;
     }
+	.items {
+		width: 86%;
+	}
 }
 
 @media screen and (width < 768px) {
@@ -126,21 +139,26 @@
     }
 }
 
-@media screen and (width < 425px) {
+@media screen and (width <= 425px) {
 	.link {
-		height: 38px; width: 90px;
+		height: 38px; width: 100px;
 	}
 	.links div{
 		gap: 10px;
 	}
+	.items {
+		width: 100%;
+		justify-content: center;
+	}
 }
 
-@media screen and (width < 375px) {
+@media screen and (width <= 375px) {
 	.link {
-		height: 38px; width: 75px;
+		height: 34px; width: 85px;
 		font-size: 12px;
 	}
 	.unitSubtitle {
 		font-size: 14px;
     }
+
 }
