--- a/src/components/about/styles.module.css
+++ b/src/components/about/styles.module.css
@@ -1,32 +1,33 @@
 @font-face {
 	font-family: Montserrat Alternates;
-	src: url("./../../app/fonts/MontserratAlternates-Medium.ttf");
+	src: url("./../../app/fonts/MontserratAlternates-Medium.woff2");
 }
 
 @font-face {
 	font-family: Montserrat Alternates Bold;
-	src: url("./../../app/fonts/MontserratAlternates-Bold.ttf");
+	src: url("./../../app/fonts/MontserratAlternates-Bold.woff2");
 }
 
 @font-face {
 	font-family: Montserrat Alternates ExtraLight;
-	src: url("./../../app/fonts/MontserratAlternates-ExtraLight.ttf");
+	src: url("./../../app/fonts/MontserratAlternates-ExtraLight.woff2");
 }
 
 @font-face {
 	font-family: Montserrat Alternates Light;
-	src: url("./../../app/fonts/MontserratAlternates-Light.ttf");
+	src: url("./../../app/fonts/MontserratAlternates-Light.woff2");
 }
 
 @font-face {
 	font-family: Montserrat Alternates Regular;
-	src: url("./../../app/fonts/MontserratAlternates-Regular.ttf");
+	src: url("./../../app/fonts/MontserratAlternates-Regular.woff2");
 }
 
 @font-face {
 	font-family: Montserrat Alternates Thin;
-	src: url("./../../app/fonts/MontserratAlternates-Thin.ttf");
+	src: url("./../../app/fonts/MontserratAlternates-Thin.woff2");
 }
+
 
 .container{
 	display: flex;
