--- a/src/components/menu/styles.module.css
+++ b/src/components/menu/styles.module.css
@@ -1,11 +1,11 @@
 @font-face {
 	font-family: Montserrat;
-	src: url("./../../app/fonts/MontserratAlternates-Medium.ttf");
+	src: url("./../../app/fonts/MontserratAlternates-Medium.woff2");
 }
 
 @font-face {
 	font-family: Montserrat Bold;
-	src: url("./../../app/fonts/MontserratAlternates-Bold.ttf");
+	src: url("./../../app/fonts/MontserratAlternates-Bold.woff2");
 }
 
 .main {
