--- a/src/components/subs/subscribe1/styles.module.css
+++ b/src/components/subs/subscribe1/styles.module.css
@@ -1,16 +1,16 @@
 @font-face {
 	font-family: Montserrat Light;
-	src: url("./../../../app/fonts/MontserratAlternates-Light.ttf");
+	src: url("./../../../app/fonts/MontserratAlternates-Light.woff2");
 }
 
 @font-face {
 	font-family: Montserrat Bold;
-	src: url("./../../../app/fonts/MontserratAlternates-Bold.ttf");
+	src: url("./../../../app/fonts/MontserratAlternates-Bold.woff2");
 }
 
 @font-face {
 	font-family: Montserrat;
-	src: url("./../../../app/fonts/MontserratAlternates-Medium.ttf");
+	src: url("./../../../app/fonts/MontserratAlternates-Medium.woff2");
 }
 
 .container {
