--- a/src/components/menu/position.module.css
+++ b/src/components/menu/position.module.css
@@ -50,6 +50,8 @@
 	transition: transform .5s;
 	transform-style: preserve-3d;
 	backface-visibility: hidden;
+	-webkit-backface-visibility: hidden;
+	-moz-backface-visibility: hidden;
 }
 
 .desc {
@@ -62,6 +64,8 @@
 	flex-direction: column;
 	font-size: 14px;
 	backface-visibility: hidden;
+	-webkit-backface-visibility: hidden;
+	-moz-backface-visibility: hidden;
 	transform: rotateY(180deg);
 	background-color: rgba(223, 228, 240, 0.5);
 	border-radius: 20px;
