--- a/src/components/menu/position.module.css
+++ b/src/components/menu/position.module.css
@@ -24,6 +24,11 @@
 	flex-direction: column;
 }
 
+.front {
+	height: 100%; aspect-ratio: 1/1;
+	position: relative;
+}
+
 .photo {
 	height: 70%; aspect-ratio: 1/1;
 	align-self: center;
