--- a/src/components/barista/person/styles.module.css
+++ b/src/components/barista/person/styles.module.css
@@ -34,21 +34,20 @@
 }
 
 .container {
-	height: 480px; aspect-ratio: 1/1;
 	display: flex;
 }
 
 .photo {
 	position: relative;
 	height: 100%;
-	width: 290px;
+	width: 60.42%;
 	border-radius: 20px;
 	background-color: black;
 	margin-right: 17px;
 }
 
 .info {
-	width: calc(100% - 17px - 290px);
+	width: calc(39.58% - 17px);
 	display: flex;
 	justify-content: space-between;
 	flex-direction: column;
@@ -56,7 +55,7 @@
 }
 
 .nickname {
-	height: 100%;
+	height: 100%; width: 100%;
 	font-family: Montserrat Alternates Light;
     font-size: 12px;
     color: #7a7a7a;
@@ -64,13 +63,12 @@
 
 .name {
 	font-family: Montserrat Alternates semibold;
-    font-size: 20px;
     color: #fff;
 	margin-bottom: 14px;
 }
 
 .link {
-	width: 80%; height: 40px;
+	width: max-content; height: 40px;
 	display: flex; align-items: center; gap: 10px;
 	background-color: #fff;
 	color: black;
@@ -79,4 +77,47 @@
 	text-decoration: none;
 	padding-left: 10px;
 	border-radius: 40px;
+}
+
+.link::after {
+	content: "Instagram";
+}
+
+@media screen and (width >= 1024px) {
+	.container {
+		height: 480px; aspect-ratio: 1/1;
+	}
+	.link {
+		padding-right: 10px;
+	}
+	.name {
+		font-size: 20px;
+	}
+}
+
+@media screen and (width < 1024px) {
+	.link {
+		padding-right: 10px;
+	}
+	.container {
+		height: 480px; aspect-ratio: 1/1;
+	}
+	.name {
+		font-size: 20px;
+	}
+}
+
+@media screen and (width <= 425px) {
+	.container {
+		height: 240px; aspect-ratio: 1/1;
+	}
+	.link {
+		padding-right: 0px;
+	}
+	.link::after{
+		content: "";
+	}
+	.name {
+		font-size: 14px;
+	}
 }
