--- a/src/components/barista/styles.module.css
+++ b/src/components/barista/styles.module.css
@@ -42,6 +42,8 @@
     font-size: 38px;
 	margin-bottom: 40px;
 	padding-top: 60px;
+	text-align: center;
+	max-width: 80%;
 }
 
 .subtitle {
@@ -49,6 +51,8 @@
     font-family: Montserrat Alternates Light;
     font-size: 22px;
 	margin-bottom: 100px;
+	text-align: center;
+	max-width: 80%;
 }
 
 .people {
@@ -58,3 +62,4 @@
 	gap: 80px;
 	margin-bottom: 60px;
 }
+
