--- a/src/components/videos/styles.module.css
+++ b/src/components/videos/styles.module.css
@@ -46,3 +46,52 @@
 	border-radius: 50px;
 	border: 5px #DFE4F0 solid;
 }
+
+@media screen and (width <= 768px){
+	.container {
+        flex-direction: column;
+    }
+	.video1 {
+		width: 400px; height: calc(400px * 5 / 7);
+	}
+	.video2 {
+		width: 400px; height: calc(400px * 5 / 7);
+	}
+}
+
+
+@media screen and (width <= 425px){
+	.container {
+        flex-direction: column;
+    }
+	.video1 {
+		width: 375px; height: calc(375px * 5 / 7);
+	}
+	.video2 {
+		width: 375px; height: calc(375px * 5 / 7);
+	}
+}
+
+@media screen and (width <= 375px){
+	.container {
+        flex-direction: column;
+    }
+	.video1 {
+		width: 325px; height: calc(325px * 5 / 7);
+	}
+	.video2 {
+		width: 325px; height: calc(325px * 5 / 7);
+	}
+}
+
+@media screen and (width <= 320px){
+	.container {
+        flex-direction: column;
+    }
+	.video1 {
+		width: 250px; height: calc(250px * 5 / 7);
+	}
+	.video2 {
+		width: 250px; height: calc(250px * 5 / 7);
+	}
+}
