--- a/src/components/menu/position.module.css
+++ b/src/components/menu/position.module.css
@@ -50,13 +50,14 @@
 	width: 100%; height: 100%;
 	border-radius: 20px;
 	margin-bottom: 10px;
+	-webkit-perspective: 1000px;
 	perspective: 1000px;
 	cursor: pointer;
 	transition: transform .5s;
 	transform-style: preserve-3d;
-	backface-visibility: hidden;
 	-webkit-backface-visibility: hidden;
 	-moz-backface-visibility: hidden;
+	backface-visibility: hidden;
 }
 
 .desc {
@@ -68,9 +69,9 @@
 	justify-content: center;
 	flex-direction: column;
 	font-size: 14px;
-	backface-visibility: hidden;
 	-webkit-backface-visibility: hidden;
 	-moz-backface-visibility: hidden;
+	backface-visibility: hidden;
 	transform: rotateY(180deg);
 	background-color: rgba(223, 228, 240, 0.5);
 	border-radius: 20px;
