--- a/src/components/menu/position.module.css
+++ b/src/components/menu/position.module.css
@@ -55,9 +55,11 @@
 	cursor: pointer;
 	transition: transform .5s;
 	transform-style: preserve-3d;
+	-webkit-transform-style: preserve-3d;
 	-webkit-backface-visibility: hidden;
 	-moz-backface-visibility: hidden;
 	backface-visibility: hidden;
+	visibility: visible;
 }
 
 .desc {
