--- a/src/components/menu/position.module.css
+++ b/src/components/menu/position.module.css
@@ -75,7 +75,7 @@
 	-moz-backface-visibility: hidden;
 	backface-visibility: hidden;
 	transform: rotateY(180deg);
-	background-color: rgba(223, 228, 240, 0.5);
+	background-color: #dfe4f0;
 	border-radius: 20px;
 }
 
