--- a/src/components/menu/position.module.css
+++ b/src/components/menu/position.module.css
@@ -93,6 +93,7 @@
     font-family: Montserrat semibold;
     font-size: 14px;
     border-radius: 20px;
+	white-space: pre-line;
 }
 
 .description {
