--- a/src/components/menu/position.module.css
+++ b/src/components/menu/position.module.css
@@ -34,10 +34,14 @@
 	align-self: center;
 	border-radius: 20px;
 	margin-bottom: 10px;
+	-webkit-perspective: 1000px;
 	perspective: 1000px;
 	cursor: pointer;
 	transition: transform 1s;
 	transform-style: preserve-3d;
+	-webkit-transform-style: preserve-3d;
+	-webkit-backface-visibility: hidden;
+	-moz-backface-visibility: hidden;
 	backface-visibility: hidden;
 }
 
