--- a/src/components/menu/position.module.css
+++ b/src/components/menu/position.module.css
@@ -42,16 +42,10 @@
 	align-self: center;
 	border-radius: 20px;
 	margin-bottom: 10px;
-	-webkit-perspective: 1000px;
 	perspective: 1000px;
 	cursor: pointer;
 	transition: transform 1s;
 	transform-style: preserve-3d;
-	-webkit-transform-style: preserve-3d;
-	-webkit-backface-visibility: hidden;
-	-moz-backface-visibility: hidden;
-	backface-visibility: hidden;
-	visibility: visible;
 }
 
 .photo:hover {
@@ -88,7 +82,7 @@
 	-moz-backface-visibility: hidden;
 	backface-visibility: hidden;
 	transform: rotateY(180deg);
-	background-color: #dfe4f0;
+	background-color: rgba(223, 228, 240, 0.4);
 	border-radius: 20px;
 }
 
