--- a/src/components/menu/styles.module.css
+++ b/src/components/menu/styles.module.css
@@ -63,12 +63,14 @@
 	font-family: Montserrat bold;
     margin-bottom: 35px;
 	text-transform: uppercase;
+	text-align: center;
 }
 
 .unitSubtitle {
 	font-family: Montserrat bold;
 	text-align: center;
     margin-bottom: 60px;
+	text-align: center;
 }
 
 .items {
