--- a/src/components/menu/styles.module.css
+++ b/src/components/menu/styles.module.css
@@ -14,6 +14,7 @@
 	flex-direction: column;
 	align-items: center;
 	scroll-behavior: smooth;
+	margin-bottom: 60px;
 }
 
 .title {
@@ -64,6 +65,7 @@
     margin-bottom: 35px;
 	text-transform: uppercase;
 	text-align: center;
+	min-width: 80%;
 }
 
 .unitSubtitle {
@@ -74,7 +76,6 @@
 }
 
 .items {
-	/* justify-content: center; */
 	display: flex;
 	flex-wrap: wrap;
     gap: 60px;
@@ -134,7 +135,8 @@
 		gap: 30px;
 	}
 	.unitTitle {
-		font-size: 30px;
+		font-size: 28px;
+		padding-top: 40px;
 	}
 	.unitSubtitle {
 		font-size: 18px;
