--- a/src/components/menu/position.module.css
+++ b/src/components/menu/position.module.css
@@ -105,7 +105,7 @@
 }
 
 .description {
-	text-align: justify;
+	text-align:left;
 	padding: 12px 5px;
 	max-width: 100%;
     font-family: Montserrat;
