--- a/src/components/subs/why/whystyles.module.css
+++ b/src/components/subs/why/whystyles.module.css
@@ -41,6 +41,9 @@
     color: var(--blue);
 	border-radius: 100px;
     margin-bottom: 40px;
+	-webkit-box-shadow: 10px 10px 10px 5px rgba(34, 60, 80, 0.3);
+	-moz-box-shadow: 10px 10px 10px 5px rgba(34, 60, 80, 0.3);
+	box-shadow: 10px 10px 10px 5px rgba(34, 60, 80, 0.3);
 }
 
 .reason2 {
@@ -58,6 +61,9 @@
     color: #fff;
 	border-radius: 100px;
     margin-bottom: 40px;
+	-webkit-box-shadow: 10px 10px 10px 5px rgba(34, 60, 80, 0.3);
+	-moz-box-shadow: 10px 10px 10px 5px rgba(34, 60, 80, 0.3);
+	box-shadow: 10px 10px 10px 5px rgba(34, 60, 80, 0.3);
 }
 
 .reason3 {
@@ -75,6 +81,9 @@
     color: #fff;
 	border-radius: 100px;
     margin-bottom: 40px;
+	-webkit-box-shadow: 10px 10px 10px 5px rgba(34, 60, 80, 0.3);
+	-moz-box-shadow: 10px 10px 10px 5px rgba(34, 60, 80, 0.3);
+	box-shadow: 10px 10px 10px 5px rgba(34, 60, 80, 0.3);
 }
 
 .reason4 {
@@ -92,6 +101,9 @@
     color: var(--blue);
 	border-radius: 100px;
     margin-bottom: 40px;
+	-webkit-box-shadow: 10px 10px 10px 5px rgba(34, 60, 80, 0.3);
+	-moz-box-shadow: 10px 10px 10px 5px rgba(34, 60, 80, 0.3);
+	box-shadow: 10px 10px 10px 5px rgba(34, 60, 80, 0.3);
 }
 
 .title {
