--- a/src/components/welcome/styles.module.css
+++ b/src/components/welcome/styles.module.css
@@ -122,6 +122,7 @@
 	}
 	.titles {
 		width: 45vw;
+		padding-left: 10vw;
     }
 	.title {
 		font-size: 55px;
@@ -133,6 +134,7 @@
 		width: 80vw;
 		display: flex;
 		gap: 3vw;
+		padding-left: 10vw;
 	}
 	.button1,
 	.button2,
@@ -146,9 +148,6 @@
 }
 
 @media screen and (max-width: 768px) {
-	.container {
-		background-image: url("./../../../public/welcome_background.png");
-	}
 	.titles {
 		width: 50vw;
     }
@@ -185,6 +184,7 @@
 	}
 	.titles {
 		width: 80vw;
+		padding-left: 0;
     }
 	.title {
 		width: 100%;
@@ -200,6 +200,7 @@
 		flex-wrap: wrap;
 		align-items: center;
 		justify-content: center;
+		padding-left: 0;
 	}
 	.button1,
 	.button2,
