--- a/src/components/parallax/styles.module.css
+++ b/src/components/parallax/styles.module.css
@@ -5,3 +5,22 @@
 	position: fixed;
 	z-index: -5;
 }
+
+.up {
+	position: fixed;
+	background-color: rgba(230, 221, 206, 0.3);
+	border-radius: 50px;
+    bottom: 30px; right: 50px;
+    width: 50px; aspect-ratio: 1;
+	border: 2px solid rgba(230, 221, 206, 0.6);
+    transition: all 0.4s ease-in-out;
+	z-index: 1;
+	color: #000000e6
+}
+
+.up:hover {
+    /* transform: scale(1.1); */
+	transform: rotateZ(360deg);
+    background-color: rgba(230, 221, 206, 0.6);
+}
+
