--- a/src/components/welcome/styles.module.css
+++ b/src/components/welcome/styles.module.css
@@ -18,6 +18,8 @@
 	flex-direction: column;
 	align-items: flex-start;
 	justify-content: center;
+	position: relative;
+	z-index: 10;
 }
 
 .titles {
