--- a/src/components/parallax/styles.module.css
+++ b/src/components/parallax/styles.module.css
@@ -10,7 +10,7 @@
 	position: fixed;
 	background-color: rgba(230, 221, 206, 0.3);
 	border-radius: 50px;
-    bottom: 30px; right: 50px;
+    bottom: 30px;
     width: 50px; aspect-ratio: 1;
 	border: 2px solid rgba(230, 221, 206, 0.6);
     transition: all 0.4s ease-in-out;
@@ -24,3 +24,18 @@
     background-color: rgba(230, 221, 206, 0.6);
 }
 
+@media screen and (width >= 1024px){
+	.up {
+		right: 50px;
+	}
+}
+@media screen and (width <= 1024px){
+	.up {
+		right: 50px;
+	}
+}
+@media screen and (width <= 425px){
+	.up {
+		right: 30px;
+	}
+}
