--- a/src/components/parallax/styles.module.css
+++ b/src/components/parallax/styles.module.css
@@ -8,11 +8,11 @@
 
 .up {
 	position: fixed;
-	background-color: rgba(223, 228, 240, 0.3);
+	background-color: rgba(234, 168, 62, 0.8);
 	border-radius: 50px;
     bottom: 30px;
     width: 50px; aspect-ratio: 1;
-	border: 2px solid rgba(223, 228, 240, 0.3);
+	border: 2px solid #EAA73E;
     transition: all 0.4s ease-in-out;
 	z-index: 1;
 	color: #000000e6
@@ -20,7 +20,7 @@
 
 .up:hover {
 	transform: rotateZ(360deg);
-    background-color: rgba(230, 221, 206, 0.6);
+    background-color: #EAA73E;
 }
 
 @media screen and (width >= 1024px){
