--- a/src/components/menu/styles.module.css
+++ b/src/components/menu/styles.module.css
@@ -62,6 +62,7 @@
 
 .unitTitle {
 	font-family: Montserrat bold;
+	max-width: 80vw;
     margin-bottom: 35px;
 	text-transform: uppercase;
 	text-align: center;
@@ -75,10 +76,12 @@
 .unitTitle:active{
 	outline: none;
     border: none;
+	background-color: transparent;
 }
 .unitTitle:focus{
 	outline: none;
     border: none;
+	background-color: transparent;
 }
 
 .unitSubtitle {
