--- a/src/components/subs/subscribe2/styles.module.css
+++ b/src/components/subs/subscribe2/styles.module.css
@@ -80,7 +80,7 @@
 
 .image {
 	width: 215px; height: 34px;
-	background-image: url(./../../../../public/second.png);
+	background-image: url(./../../../../public/second.jpg);
 	background-size: contain;
 }
 
