--- a/src/components/subs/subscribe3/styles.module.css
+++ b/src/components/subs/subscribe3/styles.module.css
@@ -79,7 +79,7 @@
 
 .image {
 	width: 44px; height: 34px;
-	background-image: url(./../../../../public/third.png);
+	background-image: url(./../../../../public/third.jpg);
 	background-size: contain;
 }
 
