--- a/src/components/subs/subscribe4/styles.module.css
+++ b/src/components/subs/subscribe4/styles.module.css
@@ -78,7 +78,7 @@
 
 .image {
 	width: 34px; height: 34px;
-	background-image: url(./../../../../public/forth.png);
+	background-image: url(./../../../../public/forth.jpg);
 	background-size: contain;
 }
 
