--- a/src/components/welcome/styles.module.css
+++ b/src/components/welcome/styles.module.css
@@ -87,7 +87,7 @@
 @media screen and (min-width: 1024px) {
 	.container {
 		background-position: 0 -320px;
-		background-image: url("./../../../public/welcome_background.png");
+		background-image: url("./../../../public/welcome_background.jpg");
 		background-repeat: no-repeat;
 		
 	}
@@ -120,7 +120,7 @@
 
 @media screen and (max-width: 1024px) {
 	.container {
-		background-image: url("./../../../public/welcome_background.png");
+		background-image: url("./../../../public/welcome_background.jpg");
 	}
 	.titles {
 		width: 45vw;
@@ -178,7 +178,7 @@
 @media screen and (max-width: 425px) {
 	.container {
 		width: 100vw;
-		background-image: url("./../../../public/welcome2_background.png");
+		background-image: url("./../../../public/welcome2_background.jpg");
 		display: flex;
 		flex-direction: column;
 		align-items: center;
@@ -245,10 +245,6 @@
 }
 
 @media screen and (max-width: 320px) {
-	.container {
-		background-image: url("./../../../public/welcome2_background.png");
-		width: 100vw;
-	}
 	.titles {
 		width: 90vw;
 		/* padding-top: 18vw; */
