--- a/src/components/subs/choice/choicestyles.module.css
+++ b/src/components/subs/choice/choicestyles.module.css
@@ -16,7 +16,7 @@
 	color: #fff;
 	justify-content: flex-start;
 	align-items: center;
-	background-image: url(./../../../../public/welcome_background.png);
+	background-image: url(./../../../../public/welcome_background.jpg);
 	background-size: cover;
 	background-position-y: bottom;
 }
