--- a/src/components/subs/subscribe1/styles.module.css
+++ b/src/components/subs/subscribe1/styles.module.css
@@ -77,7 +77,7 @@
 
 .image {
 	width: 140px; height: 34px;
-	background-image: url(./../../../../public/first.png);
+	background-image: url(./../../../../public/first.jpg);
 	background-size: contain;
 }
 
