--- a/src/components/videos/styles.module.css
+++ b/src/components/videos/styles.module.css
@@ -34,7 +34,7 @@
     align-items: center;
 	justify-content: center;
 	gap: 100px;
-	background-image: url("./../../../public/welcome2_background.png");
+	background-image: url("./../../../public/welcome2_background.jpg");
 }
 
 .video1 {
