--- a/src/components/about/styles.module.css
+++ b/src/components/about/styles.module.css
@@ -30,9 +30,11 @@
 
 
 .container{
+	min-height: 100vh;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
+	margin-bottom: 10vh;
 }
 
 .title {
