--- a/src/components/subs/subscribe2/styles.module.css
+++ b/src/components/subs/subscribe2/styles.module.css
@@ -204,3 +204,24 @@
 	border: 2px #fff solid;
 	border-radius: 90px;
 }
+
+@media screen and (width > 415px) {
+	.sub {
+		display: none;
+	}
+}
+
+@media screen and (width <= 415px) {
+	.sub {
+		width: 60%; height: 35px; border-radius: 50px;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		position: absolute; bottom: -20px; right: 20%;
+		background-color: #266665;
+		font-family: Montserrat bold;
+		font-size: 14px;
+		text-decoration: none;
+		color: #fff;
+	}
+}
