--- a/src/components/menu/position.module.css
+++ b/src/components/menu/position.module.css
@@ -41,14 +41,20 @@
 	height: 70%; aspect-ratio: 1/1;
 	align-self: center;
 	border-radius: 20px;
+	background-color: transparent;
 	margin-bottom: 10px;
-	perspective: 1000px;
+	perspective: 800px;
+	-webkit-perspective: 800px;
 	cursor: pointer;
 	transition: transform 1s;
 	transform-style: preserve-3d;
 }
 
 .photo:hover {
+	-webkit-transform: rotateY(180deg);
+	-moz-transform: rotateY(180deg);
+	-o-transform: rotateY(180deg);
+	-ms-transform: rotateY(180deg);
 	transform: rotateY(180deg);
 }
 
@@ -57,8 +63,8 @@
 	width: 100%; height: 100%;
 	border-radius: 20px;
 	margin-bottom: 10px;
-	-webkit-perspective: 1000px;
-	perspective: 1000px;
+	-webkit-perspective: 800px;
+	perspective: 800px;
 	cursor: pointer;
 	transition: transform .5s;
 	transform-style: preserve-3d;
