--- a/src/components/menu/position.module.css
+++ b/src/components/menu/position.module.css
@@ -25,6 +25,7 @@
 }
 
 .front {
+	z-index: 2;
 	height: 100%; aspect-ratio: 1/1;
 	position: relative;
 	-webkit-perspective: 1000px;
@@ -77,6 +78,7 @@
 }
 
 .desc {
+	z-index: 1;
 	width: 100%; height: 100%;
 	top: 0; left: 0;
 	position: absolute;
