--- a/src/components/menu/position.module.css
+++ b/src/components/menu/position.module.css
@@ -39,6 +39,7 @@
 }
 
 .photo {
+	display: inline-block;
 	height: 70%; aspect-ratio: 1/1;
 	align-self: center;
 	border-radius: 20px;
@@ -51,7 +52,18 @@
 	transform-style: preserve-3d;
 }
 
-.photo:hover {
+.photocontainer {
+	border-radius: 20px;
+	background-color: transparent;
+	margin-bottom: 10px;
+	perspective: 800px;
+	-webkit-perspective: 800px;
+	cursor: pointer;
+	transition: transform 1s;
+	transform-style: preserve-3d;
+}
+
+.photo:hover .photocontainer {
 	-webkit-transform: rotateY(180deg);
 	-moz-transform: rotateY(180deg);
 	-o-transform: rotateY(180deg);
