--- a/src/components/menu/position.module.css
+++ b/src/components/menu/position.module.css
@@ -59,7 +59,7 @@
 	perspective: 800px;
 	-webkit-perspective: 800px;
 	cursor: pointer;
-	transition: transform 1s;
+	transition: transform ease-in-out 1s;
 	transform-style: preserve-3d;
 }
 
