--- a/src/components/menu/position.module.css
+++ b/src/components/menu/position.module.css
@@ -25,7 +25,7 @@
 }
 
 .front {
-	z-index: 2;
+	z-index: 5;
 	height: 100%; aspect-ratio: 1/1;
 	position: relative;
 	-webkit-perspective: 1000px;
@@ -52,6 +52,8 @@
 	transform-style: preserve-3d;
 }
 
+
+
 .photocontainer {
 	border-radius: 20px;
 	background-color: transparent;
@@ -61,6 +63,7 @@
 	cursor: pointer;
 	transition: transform ease-in-out 1s;
 	transform-style: preserve-3d;
+	position: relative;
 }
 
 .photo:hover .photocontainer {
@@ -90,7 +93,7 @@
 }
 
 .desc {
-	z-index: 1;
+	z-index: 2;
 	width: 100%; height: 100%;
 	top: 0; left: 0;
 	position: absolute;
@@ -109,6 +112,7 @@
 
 .descInner {
 	width: 95%; height: 100%;
+	position: relative;
     display: flex;
     align-items: center;
     justify-content: space-between;
