--- a/src/components/menu/position.module.scss
+++ b/src/components/menu/position.module.scss
@@ -24,19 +24,6 @@
 	flex-direction: column;
 }
 
-.front {
-	z-index: 5;
-	height: 100%; aspect-ratio: 1/1;
-	position: relative;
-	-webkit-perspective: 1000px;
-	perspective: 1000px;
-	transform-style: preserve-3d;
-	-webkit-transform-style: preserve-3d;
-	-webkit-backface-visibility: hidden;
-	-moz-backface-visibility: hidden;
-	backface-visibility: hidden;
-	visibility: visible;
-}
 
 .photo {
 	display: inline-block;
@@ -50,50 +37,59 @@
 	cursor: pointer;
 	transition: transform 1s;
 	transform-style: preserve-3d;
+
+	&:hover > .front {
+		transform: perspective(1000px) rotateY(-180deg);
+		-webkit-transform: rotateY(-180deg);
+		-moz-transform: rotateY(-180deg);
+		-o-transform: rotateY(-180deg);
+		-ms-transform: rotateY(-180deg);
+		transform: rotateY(-180deg);
+    }
+
+	&:hover > .desc {
+		transform: perspective(1000px) rotateY(0deg);
+		-webkit-transform: rotateY(0deg);
+		-moz-transform: rotateY(0deg);
+		-o-transform: rotateY(0deg);
+		-ms-transform: rotateY(0deg);
+		transform: rotateY(0deg);
+	}
 }
 
 
 
-.photocontainer {
-	border-radius: 20px;
-	background-color: transparent;
-	margin-bottom: 10px;
-	perspective: 800px;
-	-webkit-perspective: 800px;
-	cursor: pointer;
-	transition: transform ease-in-out 1s;
-	transform-style: preserve-3d;
+
+.front {
+	height: 100%; aspect-ratio: 1/1;
 	position: relative;
-}
-
-.photo:hover .photocontainer {
-	-webkit-transform: rotateY(180deg);
-	-moz-transform: rotateY(180deg);
-	-o-transform: rotateY(180deg);
-	-ms-transform: rotateY(180deg);
-	transform: rotateY(180deg);
+	-webkit-perspective: 1000px;
+	perspective: 1000px;
+	// transform-style: preserve-3d;
+	// -webkit-transform-style: preserve-3d;
+	-webkit-backface-visibility: hidden;
+	-moz-backface-visibility: hidden;
+	backface-visibility: hidden;
+	filter: grayscale(10%);
+	transition: transform ease-in-out 1s;
 }
 
 
 .photo img {
 	width: 100%; height: 100%;
 	border-radius: 20px;
-	margin-bottom: 10px;
-	-webkit-perspective: 800px;
-	perspective: 800px;
-	cursor: pointer;
-	transition: transform .5s;
-	transform-style: preserve-3d;
-	-webkit-transform-style: preserve-3d;
-	-webkit-backface-visibility: hidden;
-	-moz-backface-visibility: hidden;
-	backface-visibility: hidden;
-	visibility: visible;
-	filter: grayscale(10%);
+	// -webkit-perspective: 800px;
+	// perspective: 800px;
+	// cursor: pointer;
+	// transition: transform .5s;
+	// transform-style: preserve-3d;
+	// -webkit-transform-style: preserve-3d;
+	// -webkit-backface-visibility: hidden;
+	// -moz-backface-visibility: hidden;
+	// backface-visibility: hidden;
 }
 
 .desc {
-	z-index: 2;
 	width: 100%; height: 100%;
 	top: 0; left: 0;
 	position: absolute;
@@ -105,9 +101,10 @@
 	-webkit-backface-visibility: hidden;
 	-moz-backface-visibility: hidden;
 	backface-visibility: hidden;
-	transform: rotateY(180deg);
+	transform: perspective(1000px) rotateY(180deg);
 	background-color: rgba(223, 228, 240, 0.4);
 	border-radius: 20px;
+	transition: transform ease-in-out 1s;
 }
 
 .descInner {
